# zftools

./: .dockerignore  .gitignore  AncientSageLibraryTest.ipynb  BFS.py  ChainedList.py  DijkstraMetagraphPostClose.py  DijkstraMetagraphPostClose.pyx  DijkstraMetagraphPostCloseFastQueue.pyx  DijkstraMetagraphTestbed-Copy1.ipynb  DijkstraMetagraphTestbed.ipynb  DijkstraZeroForcing.pyx  DijkstraZeroForcingTestbed.ipynb  Dockerfile  MANIFEST.in  OneGinormousFile.pyx  README.md  ZFSearchMetagraph.py  ZFSearchMetagraphBITSET.py  ZFSearchMetagraphNewAlgPostClose.py  ZFSearchMetagraphNewAlgPostClose.pyx  all_closures.py  all_closures.pyx  build_helper.py  close_under_zero_forcing.py  conftest.py  cython_sandbox.pyx  cython_sandbox.txt  lex_least_ZF_set.pyx  pyproject.toml  setup.py  tox.ini  zeroforcing.ipynb
.github/workflows/: build-and-test.yml  build-test-lint.yml  built-test-lint.yml  lint.yml
.ipynb_checkpoints/: zeroforcing-checkpoint.ipynb
Ancient Code/: AncientSageLibraryTest.ipynb  zero_forcing_wavefront.pyx
Ancient Code/.ipynb_checkpoints/: AncientSageLibraryTest-checkpoint.ipynb
Sandbox/: bitset_sizes.pyx
src/zeroforcing/: fastqueue.pxd  fastqueue.pyx  metagraph.pxd  metagraph.pyx
src/zftools/: __init__.py  metagraph.pxd  metagraph.pyx
test/: AncientSageLibraryTest.ipynb  DijkstraMetagraphTestbed.ipynb  conftest.py  metagraph_test.py  test_metagraph.py  wavefront.pyx
zeroforcing/: OneGinormousFile.pyx  bitset_wrapper.pxd  bitset_wrapper.pyx  fastqueue.pxd  fastqueue.pyx  metagraph.pxd  metagraph.pyx  radix_tree.pxd  radix_tree.pyx  test.cpp  test.h
(+6 files in other folders)
