[project]
name="zeroforcing"
version = "0.1.0"
description = "My Project"
authors = [
  {name = "Alexander Hutman"},
  {name = "Louis Deaett"}
]
keywords = ["zero", "forcing", "zero-forcing", "graph"]
requires-python = ">=3.9"
#dependencies = [
  #"sagemath-standard",
#]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Researchers",
  "Topic :: Graph Theory :: Zero Forcing Computation",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Cython"
]

[project.urls]
Repository = "https://github.com/alexhutman/ZeroForcingNumber.git"

#[project.optional-dependencies]
#develop = ["pytest"]

#[build-system]
#requires = [
  #"build",
  #"sagemath-standard",
  #"setuptools>=64.0.0",
  #"cython>=0.29.30",
  #"wheel>=0.38"
#]
#build-backend = "setuptools.build_meta"

#[tool.setuptools]
#include-package-data = true
#packages = ["zeroforcing"]
